# glyph-transpiler-rust

./: .gitignore  ALGORITHM_IR.md  CHANGELOG.md  CHECKSUMS.txt  COMPACT_SYNTAX.md  COMPILATION_PIPELINE.md  CONTRACTS.md  DESIGN.md  GLYPH04_COMPLIANCE.md  IMPLEMENTATION_STATUS.md  LANGUAGE.md  LICENSE  LISP_CORE.md  LIVE_LANGUAGE_DESIGN.md  MAINTAINABILITY.md  Makefile  PREPROCESSOR.md  PR_IMPLEMENTATION_NOTES.md  README.md  RUST_TODO.md  SKETCH_DESIGN.md  STUDIO_04_DESIGN.md  STUDIO_SEMANTIC_NAVIGATION.md  TEMPORAL.md  TEMPORAL_DESIGN.md  TEMPORAL_DESIGN_RESTORE_NOTE.md  TEMPORAL_IMPLEMENTATION_STATUS.md  VARIANT_PATTERNS.md  VERIFICATION.md  __branch_marker__  glyph.py  glyph_gradio.py  glyph_live.py  glyphc.py  libgenerated.rlib  libhost_binding.rlib  metrics.py  pyproject.toml  requirements-gradio.txt  run.py
.github/: ci-trigger.txt
demo/: Cargo.toml
demo-system/: Cargo.toml  README.md
docs/: ACCEPTANCE.md  CHANGELOG.md  COMPACT_SYNTAX.md  CONTRACTS.md  DESIGN.md  EXECUTION_STRUCTURE.md  GLYPH04_COMPLIANCE.md  GRADIO_HOST.md  HOST_BINDING_DESIGN.md  IO_STATE_APP.md  LISP_CORE.md  LIVE_LANGUAGE_DESIGN.md  PIPELINE_DESIGN.md  PREPROCESSOR.md  PUBLIC_UI.md  PUBLIC_UI_SDK.md  README.md  SKETCH_DESIGN.md  STUDIO_UX.md  TEMPORAL.md  TEMPORAL_DESIGN.md  UI_IR.md
examples/: algorithm_sketch.glyph  controller.glyph  door_sketch.glyph  function_block.glyph  gradio_motor.glyph  gradio_profile.glyph  gradio_profile.ui.json  gradio_temperature.glyph  gradio_temperature_app.py  gradio_temperature_dashboard.py  lisp_core.glyph  system_controller.glyph
glyph/: __init__.py  algorithm_ir.py  algorithm_mermaid.py  architecture.py  artifacts.py  ast_macros.py  capabilities.py  capability_codegen.py  capability_constructor_bridge.py  capability_model_validate.py  capability_places.py  capability_surface_validate.py  capability_type_normalize.py  compilation.py  compiled_live_image.py  compiler.py  compliance.py  contract_application_binding.py  contract_law_bridge.py  contract_semantics.py  contract_type_normalize.py  contracts.py  diagram_app.py  diagram_ui.py  direct_io_layout.py  execution_ir.py  failure_result_labels.py  frontend.py  function_blocks.py  functional.py  glyph04_derived.py  gradio_backend.py  gradio_renderer.py  guard_distinct_failure_repair.py  host_binding_codegen.py  host_requirement_builder.py  host_requirements.py  incremental.py  initial_transition_layout.py  io_state_views.py  (+54 more)
scripts/: fix_generated_header_test.py  refactor_header_docs_once.py  verify_glyph04_compat.py  verify_glyph04_stabilization.py
tests/: acceptance_support.py  test_acceptance_glyph04.py  test_acceptance_order.py  test_acceptance_ownership.py  test_acceptance_schemas.py  test_acceptance_systems.py  test_algorithm_ir.py  test_ast_macros.py  test_capabilities.py  test_capability_codegen.py  test_capability_constructors.py  test_capability_places.py  test_cli.py  test_compilation_pipeline.py  test_compiler.py  test_contract_law_bridge.py  test_contract_semantics.py  test_contracts.py  test_dev_cli.py  test_direct_io_layout.py  test_execution_ir.py  test_failure_result_labels.py  test_function_blocks.py  test_function_values.py  (+50 more)
(+29 files in other folders)
