[project]
name = "glyph-rust"
version = "0.4.0"
description = "A compact systems-design DSL with capability, resource, temporal, and kinded runtime contracts"
requires-python = ">=3.10"

[project.scripts]
glyphc = "glyphc:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["glyph"]
py-modules = ["glyphc"]
